changes has beem  made

--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ html{
 .inn-div li{
  font-size:2rem;
  position:relative;
- top:2rem;
+ top:1rem;
  list-style:none;
- margin:2rem 0rem;
+ margin:1.6rem 0rem;
  font-weight: 400;
 }
 input{
@@ -80,8 +80,8 @@ h2{
     .inn-div{
         width:90vw;
     }
-    h1{
-       word-spacing: .1em;
+    h1.question{
+       font-size: 4.6vw;
     }
     .inn-div li{
         top:1rem;
